--- a/src/styles/MyWords.css
+++ b/src/styles/MyWords.css
@@ -5,8 +5,9 @@ div.words {
     gap: 8px;
     overflow-y: auto;
     padding-bottom: 20px;
-    padding-right: 10px;
     width: 100%;
+    background-color: #fff;
+    z-index: 2;
 }
 div.words > span {
     border: 1px solid #ccc;
@@ -32,31 +33,4 @@ div.search > input {
     border-radius: 4px;
     outline: none;
     width: 100%;
-}
-
-
-.top {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 40px;
-}
-.top button {
-    font: normal 14px Verdana;
-    background: none;
-    border: 1px solid #ccc;
-    padding: 6px 8px;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: none;
-}
-.top button:hover {
-    background-color: gray;
-    color: white;
-    border: 1px solid gray;
-}
-.top .left_buttons {
-    display: flex;
-    gap: 10px;
 }
