--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,38 +1,53 @@
 @media (min-width: 360px) and (max-width: 667px) {
-    #root {
-        height: 100vh;
-        padding: 20px;
-        box-sizing: border-box;
+    html,
+    body {
+        height: 100%;
     }
+    #root {
+        height: 100%;
+        padding: 20px;
+        padding-bottom: 0;
+        box-sizing: border-box;
+        z-index: 0;
+    }
+
+
     .main {
         width: 100%;
         height: 100%;
+        background-color: white;
     }
     .main nav {
         flex: none;
-        padding-top: 120px;
+        padding-top: 100px;
     }
     .main nav button {
         width: 240px;
         font: normal 16px Arial;
         padding: 18px 6px;
     }
+
+
     footer {
         width: 100%;
-        margin-bottom: 60px;
+        z-index: 1;
     }
+    footer.hidden {
+        display: none;
+    }
+
 
     div.top {
         margin-bottom: 20px;
     }
-    .top > button {
-        width: auto;
-    }
+
 
     .main form {
         flex-direction: column;
         width: 100%;
         gap: 15px;
+        background-color: white;
+        z-index: 2;
     }
     .main form textarea {
         height: 140px;
@@ -40,10 +55,6 @@
     .main form input {
         width: 100%;
         padding: 12px 8px;
-    }
-    .buttons button.add_button {
-        padding: 12px 0;
-        width: 100px;
     }
     .buttons button.add_button:hover {
         background: none;
@@ -55,12 +66,14 @@
         padding: 8px 0;
     }
 
+
     .main div.daily_block {
         gap: 10px;
     }
     .main div.daily_block ul {
         justify-content: space-between;
         order: 3;
+        padding-bottom: 20px;
     }
     .main div.daily_block ul li button {
         height: 40px;
@@ -73,11 +86,6 @@
         height: 100%;
         justify-content: center;
         order: 1;
-    }
-
-
-    footer.hidden {
-        display: none;
     }
 
 
